[tool.poetry]
name = "crypto-widget"
version = "0.1.0"
description = "cryptocurrency widget and telegram bot"
authors = ["kom46 <kommunizm46@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "crypto_widget"}]

[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"
yfinance = "0.2.14"
python-kucoin = "2.1.3"


[tool.poetry.group.dev.dependencies]
flake8-bugbear = "^23.3.23"
mypy = "^1.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
